took create page logic to ApiUtil class, change return type to Page in get methods